crates/viewer/dl_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.EncodedDepthImage.snap
---
source: crates/viewer/dl_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
blob: [[0]]
media_type: [application/octet-stream]
meter: [1000.0]
colormap: [5]
depth_range: [[0.0, 65535.0]]
point_fill_ratio: [1.0]
draw_order: [-20.0]
magnification_filter: [1]
